# azure_function_template

./: .funcignore  .gitignore  README.md  copier.yml  pyproject.toml  template_secrets.conf
infrastructure/: deploy_infra.ps1  function.bicep
utils/: deploy_func.ps1  env_setup.ps1
{{project_name}}/: .gitignore  LICENSE  README.md  execute_func.ps1.jinja  pyproject.toml  secrets.conf.jinja
{{project_name}}/infrastructure/: deploy_infra.ps1  function.bicep.jinja
{{project_name}}/src/: pyproject.toml
{{project_name}}/utils/: deploy_func.ps1  env_setup.ps1.jinja  execute_func.ps1.jinja
